tests/specs/ecosystem/olets/tailwindcss_fluid_font_size/1_3_0.test
olets/tailwindcss-fluid-font-size/1.3.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --

error: TS2304 [ERROR]: Cannot find name 'PluginWithOptions'.
 */ const fluidFontSize: PluginWithOptions = {} as never;
                         ~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:11:26

